--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8" />
 <title>WebSocket Test</title>
+<script language="javascript" type="text/javascript" src="/js/client-config.js"></script>
 <script language="javascript" type="text/javascript">
-    var wsUri = "ws://geekhub.local:8080/";
     var output;
 
     function init() {
@@ -11,7 +11,7 @@
     }
 
     function testWebSocket() {
-        websocket = new WebSocket(wsUri);
+        websocket = new WebSocket(clientConfig.wsUri);
         websocket.onopen = function(evt) {
             onOpen(evt)
         };
